<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            app:key="@string/books_notion_database_link_id"
            app:title="@string/books_notion_database_link"
            app:useSimpleSummaryProvider="true"

            />


        <EditTextPreference
            app:key="@string/books_notion_database_id"
            app:title="@string/books_notion_database"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"
            />

        <EditTextPreference
            app:key="@string/records_notion_database_link_id"
            app:title="@string/records_notion_database_link"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:key="@string/records_notion_database_id"
            app:title="@string/records_notion_database"
            app:useSimpleSummaryProvider="true"
            app:enabled="false"
            />

        <EditTextPreference
            app:key="@string/api_url"
            app:title="@string/api_url_title"
            app:defaultValue="@string/api_url_default"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

</PreferenceScreen>